--- a/SignalR/appsettings.json
+++ b/SignalR/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DatabaseConnection": "Data Source=.;Initial Catalog=Chat;Integrated Security=True;Pooling=False"
+  }
+  
 }
